Fixed issue with virtual height on iOS Safari

--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,9 @@ body {
   align-items: center;
 }
 
+@supports (-webkit-touch-callout: none) {
+  /* Safari on iOS */
+  .nav {
+    height: -webkit-fill-available;
+  }
+}
